# gdb-frontend

./: .gitignore  pyproject.toml  setup.py  urls.py
src/gdb_frontend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/gdbfrontend/: commands.py  debug_events.py  debug_server.py  gdbfrontend.py  http_handler.py  http_server.py  plugin.py  run.py  run_gui.py  setup.py  terminal_daemon.py  urls.py  util.py  websocket.py
src/gdbfrontend/api/: collabration.py  debug.py  globalvars.py  process.py
src/gdbfrontend/docs/tutorials/embedded-debugging/: index.html
src/gdbfrontend/frontend/css/: main.css
src/gdbfrontend/frontend/js/: main.js
src/gdbfrontend/frontend/js/lib/: AsynchronousSemaphore.js
src/gdbfrontend/gui/: AboutDialog.py  MainWindow.py
src/gdbfrontend/plugins/hello/: hello.py
src/gdbfrontend/plugins/hello/url_modules/: api.py
src/gdbfrontend/plugins/theme_cyberpunk/: theme_cyberpunk.py
src/gdbfrontend/plugins/theme_dark/: theme_dark.py
src/gdbfrontend/plugins/theme_doki/: theme_doki.py
src/gdbfrontend/plugins/theme_green/: theme_green.py
src/gdbfrontend/plugins/theme_light/: theme_light.py
src/gdbfrontend/plugins/theme_red/: theme_red.py
src/gdbfrontend/plugins/theme_sakura/: theme_sakura.py
src/gdbfrontend/plugins/theme_sky/: theme_sky.py
src/gdbfrontend/plugins/theme_waifu/: theme_waifu.py
src/gdbfrontend/url_modules/api/: connect.py  disassemble.py  disassemble_frame.py  event.py  load.py  registers.py  sources.py  state.py  switch_theme.py
src/gdbfrontend/url_modules/api/breakpoint/: add.py  del.py  set_condition.py  set_enabled.py
src/gdbfrontend/url_modules/api/collabration/: enhanced_collabration_disable.py  enhanced_collabration_enable.py
src/gdbfrontend/url_modules/api/frame/: variable.py  watches.py
src/gdbfrontend/url_modules/api/fs/: list.py
src/gdbfrontend/url_modules/api/process/: all.py  sigkill.py  sigterm.py
src/gdbfrontend/url_modules/api/runtime/: attach.py  continue.py  next.py  pause.py  (+5 more)
src/gdbfrontend/url_modules/main/: main.py
(+51 files in other folders)
